# xcm-translation

./: .gitignore  Makefile.am  Makefile_copy_2_am.txt  README_TRANSLATION.md  cargo_build_all.sh  cargo_clippy_all.sh  cargo_errors.txt  compile_commands.json  gen-results.sh  notes.txt  out.txt  perf-tests.txt  perf.py  xcmrelay
common/: util.rs
common/rs-common-ctl/: Cargo.toml
common/rs-common-ctl/src/: common_ctl.rs
common/rs-util/: Cargo.toml  out.txt
common/rs-util/src/: util.rs
libxcm/core/: attr_path_OLD.c  res.txt  xcm_version.rs
libxcm/core/rs-attr-node/: Cargo.toml  res.txt
libxcm/core/rs-attr-node/src/: attr_node.rs
libxcm/core/rs-attr-path/: Cargo.toml  out.txt
libxcm/core/rs-attr-path/src/: attr_path.rs
libxcm/core/rs-attr-tree/: Cargo.toml
libxcm/core/rs-attr-tree/src/: attr_tree.rs
libxcm/core/rs-attrpath/: Cargo.toml  attr_path_generated.h
libxcm/core/rs-attrpath/src/: attr_path.rs
libxcm/core/rs-core/: Cargo.toml  cbindgen.toml
libxcm/core/rs-core/src/: xcm.rs
libxcm/core/rs-log/: Cargo.toml
libxcm/core/rs-log-attr-tree/: Cargo.toml
libxcm/core/rs-log-attr-tree/src/: log_attr_tree.rs
libxcm/core/rs-log/src/: log.rs
libxcm/core/rs-xcm/: Cargo.toml
libxcm/core/rs-xcm-addr/: Cargo.toml  out.txt
libxcm/core/rs-xcm-addr/src/: xcm_addr.rs
libxcm/core/rs-xcm-attr-map/: Cargo.toml
libxcm/core/rs-xcm-attr-map/src/: xcm_attr_map.rs
libxcm/core/rs-xcm-version/: Cargo.toml
libxcm/core/rs-xcm-version/src/: xcm_version.rs
libxcm/core/rs-xcm/src/: xcm.rs
libxcm/core/rs-xpoll/: Cargo.toml
libxcm/core/rs-xpoll/src/: xpoll.rs
libxcm/ctl/rs-ctl/: Cargo.toml
libxcm/ctl/rs-ctl/src/: ctl.rs
libxcm/tp/common/: active_fd.rs  xcm_tp_from_c2rust.rs
libxcm/tp/common/rs-active-fd/: Cargo.toml  res.txt
libxcm/tp/common/rs-active-fd/src/: active_fd.rs
libxcm/tp/common/rs-active_fd/: Cargo.toml
libxcm/tp/common/rs-active_fd/src/: active_fd.rs
libxcm/tp/common/rs-common-tp/: Cargo.toml
libxcm/tp/common/rs-common-tp/src/: common_tp.rs
libxcm/tp/common/rs-xcm-tp/: Cargo.toml
libxcm/tp/common/rs-xcm-tp/src/: xcm_tp.rs
libxcm/tp/common/rs-xcm_tp/: Cargo.toml
libxcm/tp/common/rs-xcm_tp/src/: xcm_tp.rs
libxcm/tp/dns/rs-xcm-dns/: Cargo.toml
libxcm/tp/dns/rs-xcm-dns/src/: xcm_dns.rs
libxcmctl/: xcmc.rs
perf_results/: c-code-res-1.txt  c-code-res-10.txt  c-code-res-2.txt  c-code-res-3.txt  c-code-res-4.txt  c-code-res-5.txt  c-code-res-6.txt  c-code-res-7.txt  c-code-res-8.txt  c-code-res-9.txt  full-c2rust-translation-2-res-1.txt  full-c2rust-translation-2-res-10.txt  full-c2rust-translation-2-res-2.txt  full-c2rust-translation-2-res-3.txt  full-c2rust-translation-2-res-4.txt  full-c2rust-translation-2-res-5.txt  full-c2rust-translation-2-res-6.txt  full-c2rust-translation-2-res-7.txt  full-c2rust-translation-2-res-8.txt  full-c2rust-translation-2-res-9.txt  full-c2rust-translation-final-2-res-1.txt  full-c2rust-translation-final-2-res-10.txt  full-c2rust-translation-final-2-res-11.txt  full-c2rust-translation-final-2-res-12.txt  full-c2rust-translation-final-2-res-13.txt  full-c2rust-translation-final-2-res-14.txt  full-c2rust-translation-final-2-res-15.txt  full-c2rust-translation-final-2-res-16.txt  full-c2rust-translation-final-2-res-17.txt  full-c2rust-translation-final-2-res-18.txt  full-c2rust-translation-final-2-res-19.txt  full-c2rust-translation-final-2-res-2.txt  full-c2rust-translation-final-2-res-20.txt  full-c2rust-translation-final-2-res-3.txt  full-c2rust-translation-final-2-res-4.txt  full-c2rust-translation-final-2-res-5.txt  full-c2rust-translation-final-2-res-6.txt  full-c2rust-translation-final-2-res-7.txt  full-c2rust-translation-final-2-res-8.txt  full-c2rust-translation-final-2-res-9.txt  (+330 more)
python/: config.py
test/data/cert/162197/default/: cert.pem  key.pem
test/data/cert/162285/default/: cert.pem  key.pem
test/data/cert/163311/default/: cert.pem  key.pem
test/data/cert/163377/default/: key.pem  tc.pem
test/data/cert/163405/default/: key.pem  tc.pem
test/data/cert/163437/default/: cert.pem  key.pem
test/data/cert/163468/default/: key.pem  tc.pem
test/data/cert/163519/default/: key.pem  tc.pem
test/data/cert/163531/default/: cert.pem  key.pem
test/data/cert/163561/default/: cert.pem  key.pem
test/data/cert/166409/default/: cert.pem  key.pem
test/data/cert/20991/default/: key.pem  tc.pem
test/data/cert/24077/default/: cert.pem  key.pem
test/data/cert/24078/default/: cert.pem  key.pem
test/data/cert/24080/default/: key.pem  tc.pem
test/data/cert/24082/default/: key.pem  tc.pem
test/data/cert/24661/default/: key.pem  tc.pem
test/data/cert/24663/default/: cert.pem  key.pem
test/data/cert/24667/default/: key.pem  tc.pem
test/data/cert/27050/default/: key.pem  tc.pem
test/data/cert/27052/default/: cert.pem  key.pem
test/data/cert/27483/default/: cert.pem  key.pem
test/data/cert/27702/default/: cert.pem  key.pem
test/data/cert/27819/default/: key.pem  tc.pem
test/data/cert/27820/default/: key.pem  tc.pem
test/data/cert/27822/default/: cert.pem  key.pem
test/data/cert/27824/default/: cert.pem  key.pem
test/data/cert/27826/default/: key.pem  tc.pem
test/data/cert/27831/default/: key.pem  tc.pem
test/data/cert/27833/default/: cert.pem  key.pem
test/data/cert/27835/default/: cert.pem  key.pem
test/data/cert/27907/default/: cert.pem  key.pem
test/data/cert/27927/default/: key.pem  tc.pem
test/data/cert/27995/default/: key.pem  tc.pem
test/data/cert/28004/default/: cert.pem  key.pem
test/data/cert/28036/default/: cert.pem  key.pem
test/data/cert/28121/default/: key.pem  tc.pem
test/data/cert/28158/default/: cert.pem  key.pem
test/data/cert/28294/default/: cert.pem  key.pem
test/data/cert/28301/default/: cert.pem  key.pem
test/data/cert/28404/default/: cert.pem  key.pem
test/data/cert/28553/default/: cert.pem  key.pem
test/data/cert/29861/ep-y/: tc.pem
test/src/utest/: utesthumanreport.c
tools/common/: attr.rs
tools/xcmrelay/: main.rs  rserver.rs  xrelay.rs
xcm-rust-common/: Cargo.toml
xcm-rust-common/src/: lib.rs
(+213 files in other folders)
