[package]
name = "rs-attr-path"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.171"
xcm-rust-common = { path = "../../../xcm-rust-common/" }
rs-util = { path = "../../../common/rs-util/"}
rs-log = { path = "../rs-log/"}



[lib]
path = "src/attr_path.rs"
crate-type = ["rlib", "cdylib"]