[package]
name = "rs-attr-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.171"
rs-attr-path = {path="../rs-attr-path"}
rs-log-attr-tree = {path="../rs-log-attr-tree"}
xcm-rust-common = { path = "../../../xcm-rust-common/" }
rs-attr-node = {path = "../rs-attr-node"}
rs-util = {path = "../../../common/rs-util/"}
rs-log = { path = "../rs-log/"}


[lib]
path="src/attr_tree.rs"
crate-type = ["cdylib", "rlib"]
