[package]
name = "rs-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.171"
rs-common-ctl = { path = "../../../common/rs-common-ctl" }
rs-util = { path = "../../../common/rs-util"}
rs-log = {path = "../../core/rs-log"}
xcm-rust-common = { path = "../../../xcm-rust-common"}
rs-xpoll = { path = "../../core/rs-xpoll"}

[lib]
path="src/ctl.rs"
crate-type = ["cdylib"]