[package]
name = "rs-common-tp"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2.171"
xcm-rust-common = { path = "../../../../xcm-rust-common/" }
rs-log = { path = "../../../core/rs-log"}
rs-xcm-addr = {path="../../../core/rs-xcm-addr"}

[lib]
path="src/common_tp.rs"
crate-type = ["cdylib", "rlib"]
